Revert "Merge branch 'master' into Meitrack-Vehicle-device-integration"
This reverts commit 654fd5226505123b607eeb139a271ff4cb43653a, reversing
changes made to accc0f62ea4a1482d52a478c8fffd5eaf31c14a1.