@@ -24,8 +24,8 @@ import org.slf4j.LoggerFactory;
 import org.traccar.BaseProtocol;
 import org.traccar.ServerManager;
 import org.traccar.api.ExtendedObjectResource;
-import org.traccar.command.CommandSender;
 import org.traccar.command.CommandSenderManager;
+import org.traccar.config.Keys;
 import org.traccar.database.CommandsManager;
 import org.traccar.helper.LogAction;
 import org.traccar.helper.model.DeviceUtil;
@@ -57,6 +57,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Path("commands")
 @Produces(MediaType.APPLICATION_JSON)
@@ -115,7 +116,7 @@ public class CommandResource extends ExtendedObjectResource<Command> {
             } else {
                 return type.equals(Command.TYPE_CUSTOM);
             }
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @POST
@@ -168,17 +169,18 @@ public class CommandResource extends ExtendedObjectResource<Command> {
 
             Device device = storage.getObject(Device.class, new Request(
                     new Columns.All(), new Condition.Equals("id", deviceId)));
-            CommandSender sender = commandSenderManager.getSender(device);
+            String sender = device.getString(Keys.COMMAND_SENDER.getKey());
             if (sender != null) {
-                return sender.getSupportedCommands().stream().map(Typed::new).toList();
+                return commandSenderManager.getSender(sender).getSupportedCommands()
+                        .stream().map(Typed::new).collect(Collectors.toList());
             }
 
             BaseProtocol protocol = getDeviceProtocol(deviceId);
             if (protocol != null) {
                 if (textChannel) {
-                    return protocol.getSupportedTextCommands().stream().map(Typed::new).toList();
+                    return protocol.getSupportedTextCommands().stream().map(Typed::new).collect(Collectors.toList());
                 } else {
-                    return protocol.getSupportedDataCommands().stream().map(Typed::new).toList();
+                    return protocol.getSupportedDataCommands().stream().map(Typed::new).collect(Collectors.toList());
                 }
             } else {
                 return Collections.singletonList(new Typed(Command.TYPE_CUSTOM));
